@@ -1,3 +1,10 @@
+2004-10-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b247
+
+	* Fix 1003564: Custom textcolor not applied to captions
+
+	* Fix 1023569: RSS was removing "non-print" characters, which b0rked
+	  non-US languages.
+
 2004-10-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b246
 
 	* Fix 1006567: If an image filename is stripped of disallowed chars,
